# TubeX

./: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  tube.stp  管10-0.9-180.STEP  管10-0.9-90.STEP
